setup llm agent

--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ PORT=8000
 ### Model Information
 HOST_URL=http://localhost:11434
 API_KEY='ollama'  # required but ignored
-MODEL=gemma3:12b
+MODEL=qwen3:14b
