setup 2-step rag

--- a/.env
+++ b/.env
@@ -1,7 +1,12 @@
 ### LLM Agent Setup
-PORT=8000
+API_PORT=8000
+LOG_FILE=../logfiles/policy_agent.log
 
 ### Model Information
 HOST_URL=http://localhost:11434
-API_KEY='ollama'  # required but ignored
 MODEL=qwen3:14b
+
+### Embedding Model Information
+EMBEDDING_HOST_URL=http://localhost:11434
+EMBEDDING_MODEL=embeddinggemma:300m
+FILE_DIR=../../test_data/synthetic_policy_documents/
