Implemented used documents return

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 ### LLM Agent Setup
 API_PORT=8000
+# Should be absolute path in prod:
 LOG_FILE=../logfiles/policy_agent.log
 
 ### Model Information
@@ -9,4 +10,5 @@ MODEL=qwen3:14b
 ### Embedding Model Information
 EMBEDDING_HOST_URL=http://localhost:11434
 EMBEDDING_MODEL=embeddinggemma:300m
+# Should be absolute path in prod:
 FILE_DIR=../../test_data/synthetic_policy_documents/
