small fix for api server

--- a/.env
+++ b/.env
@@ -11,4 +11,4 @@ MODEL=qwen3:14b
 EMBEDDING_HOST_URL=http://localhost:11434
 EMBEDDING_MODEL=embeddinggemma:300m
 # Should be absolute path in prod:
-FILE_DIR=../../test_data/synthetic_policy_documents/
+FILE_DIR=../test_data/synthetic_policy_documents/
