setup docker container

--- a/.env
+++ b/.env
@@ -1,14 +1,14 @@
 ### LLM Agent Setup
 API_PORT=8000
 # Should be absolute path in prod:
-LOG_FILE=../logfiles/policy_agent.log
+LOG_FILE=/app/logfiles/policy_agent.log
 
 ### Model Information
-HOST_URL=http://localhost:11434
+HOST_URL=http://host.docker.internal:11434
 MODEL=qwen3:14b
 
 ### Embedding Model Information
-EMBEDDING_HOST_URL=http://localhost:11434
+EMBEDDING_HOST_URL=http://host.docker.internal:11434
 EMBEDDING_MODEL=embeddinggemma:300m
 # Should be absolute path in prod:
-FILE_DIR=../test_data/synthetic_policy_documents/
+FILE_DIR=/app/synthetic_policy_documents
