--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-langchain-community
-langchain-core
-langchain
-langgraph
-langchain-ollama
-python-dotenv
-pydantic
-pydantic-settings
-uvicorn
-fastapi
+langgraph~=1.0.4
+langchain~=1.1.0
+pydantic~=2.12.5
+pydantic-settings~=2.12.0
+python-dotenv~=1.2.1
+fastapi~=0.122.0
+uvicorn~=0.38.0
+langchain-core~=1.1.0
+langchain-community~=0.4.1
